--- a/live-backend-view/package.json
+++ b/live-backend-view/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "nprogress": "^0.2.0",
